# htmlescape2

./: Cargo.toml  README.md
benches/: default.rs
src/: encode.rs  entities.rs
tests/: test.rs
