[package]
name = "htmlescape2"
version = "0.3.1"
authors = [ "Baz <github(a)luxolus.com>", "Viktor Dahl <pazaconyoman@gmail.com>" ]
license = "Apache-2.0 / MIT"
repository = "https://github.com/bazaah/htmlescape2"
description = "A library for HTML entity encoding and decoding"

[dependencies]

[dev-dependencies]
num = "0.2"
rand = "0.7"
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "default"
harness = false
